--- a/Views/adAsignacionCentrosCosto/Partials/DualListboxUsuariosCC.cshtml
+++ b/Views/adAsignacionCentrosCosto/Partials/DualListboxUsuariosCC.cshtml
@@ -1,34 +1,45 @@
 ﻿@{
     Layout = null;
+    string guid = (string)ViewData["guid"],
+    Input_BuscarDisponibles_ModalAsignarCCXUsuario = "Input_BuscarDisponibles_ModalAsignarCCXUsuario_" + guid,
+    Contenedor_Disponibles_ModalAsignarCCXUsuario = "Contenedor_Disponibles_ModalAsignarCCXUsuario_" + guid,
+    TXT_ContadorDisponibles_ModalAsignarCCXUsuario = "TXT_ContadorDisponibles_ModalAsignarCCXUsuario_" + guid,
+    BTN_HaciaDerecha_ModalAsignarCCXUsuario = "BTN_HaciaDerecha_ModalAsignarCCXUsuario_" + guid,
+    BTN_TodoHaciaDerecha_ModalAsignarCCXUsuario = "BTN_TodoHaciaDerecha_ModalAsignarCCXUsuario_" + guid,
+    BTN_HaciaIzquierda_ModalAsignarCCXUsuario = "BTN_HaciaIzquierda_ModalAsignarCCXUsuario_" + guid,
+    BTN_TodoHaciaIzquierda_ModalAsignarCCXUsuario = "BTN_TodoHaciaIzquierda_ModalAsignarCCXUsuario_" + guid,
+    Input_BuscarAsignados_ModalAsignarCCXUsuario = "Input_BuscarAsignados_ModalAsignarCCXUsuario_" + guid,
+    Contenedor_Asignados_ModalAsignarCCXUsuario = "Contenedor_Asignados_ModalAsignarCCXUsuario_" + guid,
+    TXT_ContadorAsignados_ModalAsignarCCXUsuario = "TXT_ContadorAsignados_ModalAsignarCCXUsuario_" + guid;
 }
 <div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-lg-5">
                 <h5 class="text-center mt-2">Disponibles</h5>
-                <input type="text" class="form-control my-2" placeholder="Buscar" id="buscarDisponibles" onkeyup="$.CentroCostoUsuario.Modal.cartas.buscar('buscarDisponibles','disponibles')">
-                <div id="disponibles" class="border border-black contenedor-cartas"></div>
-                <p class="fst-italic">Mostrando <span id="contadorDisponibles">50</span>  de  <span class="totalCartas">100</span></p>
+                <input type="text" class="form-control my-2" placeholder="Buscar" id="@{@Input_BuscarDisponibles_ModalAsignarCCXUsuario}" onkeyup="$.ModuloAsignacionCentroCosto.CentroCostoUsuario.Modal.cartas.buscar('@{@Input_BuscarDisponibles_ModalAsignarCCXUsuario}','@{@Contenedor_Disponibles_ModalAsignarCCXUsuario}')">
+                <div id="@{@Contenedor_Disponibles_ModalAsignarCCXUsuario}" class="border border-black contenedor-cartas"></div>
+                <p class="fst-italic">Mostrando <span id="@{@TXT_ContadorDisponibles_ModalAsignarCCXUsuario}">50</span>  de  <span class="totalCartas">100</span></p>
             </div>
             <div class="col-12 col-lg-2 d-flex align-items-center justify-content-center">
                 <div class="cotainer-fluid">
                     <div class="row ">
                         <div class="col-lg-12 d-flex align-items-center justify-content-center">
-                            <button class="btn btn-outline-secondary BTN_Mover d-flex align-items-center justify-content-center" id="BTN_HaciaDerecha">
+                            <button class="btn btn-outline-secondary BTN_Mover d-flex align-items-center justify-content-center" id="@{@BTN_HaciaDerecha_ModalAsignarCCXUsuario}">
                                 <span class="d-none d-md-block text-center"><i class="bi bi-chevron-right"></i></span>
                                 <span class="d-sm-block d-md-none "><i class="bi bi-chevron-down"></i></span>
                             </button>
-                            <button class="btn btn-outline-secondary BTN_Mover d-flex align-items-center justify-content-center" id="BTN_TodoHaciaDerecha">
+                            <button class="btn btn-outline-secondary BTN_Mover d-flex align-items-center justify-content-center" id="@{@BTN_TodoHaciaDerecha_ModalAsignarCCXUsuario}">
                                 <span class="d-none d-md-block text-center"><i class="bi bi-chevron-double-right"></i></span>
                                 <span class="d-sm-block d-md-none"><i class="bi bi-chevron-double-down"></i></span>
                             </button>
                         </div>
                         <div class="col-lg-12 d-flex align-items-center justify-content-center">
-                            <button class="btn btn-outline-secondary BTN_Mover d-flex align-items-center justify-content-center" id="BTN_HaciaIzquierda">
-                                <span class="d-none d-md-block text-center" id="BTN_HaciaIzquierdo"><i class="bi bi-chevron-left"></i></span>
+                            <button class="btn btn-outline-secondary BTN_Mover d-flex align-items-center justify-content-center" id="@{@BTN_HaciaIzquierda_ModalAsignarCCXUsuario}">
+                                <span class="d-none d-md-block text-center"><i class="bi bi-chevron-left"></i></span>
                                 <span class="d-sm-block d-md-none"><i class="bi bi-chevron-up"></i></span>
                             </button>
-                            <button class="btn btn-outline-secondary BTN_Mover d-flex align-items-center justify-content-center" id="BTN_TodoHaciaIzquierda">
+                            <button class="btn btn-outline-secondary BTN_Mover d-flex align-items-center justify-content-center" id="@{@BTN_TodoHaciaIzquierda_ModalAsignarCCXUsuario}">
                                 <span class="d-none d-md-block text-center"><i class="bi bi-chevron-double-left"></i></span>
                                 <span class="d-sm-block d-md-none"><i class="bi bi-chevron-double-up"></i></span>
                             </button>
@@ -38,10 +49,10 @@
             </div>
             <div class="col-12 col-lg-5">
                 <h5 class="text-center mt-2">Asignados</h5>
-                <input type="text" class="form-control my-2" placeholder="Buscar" id="buscarAsignados" onkeyup="$.CentroCostoUsuario.Modal.cartas.buscar('buscarAsignados','asignados')">
-                <div id="asignados" class="border border-black contenedor-cartas"></div>
+                <input type="text" class="form-control my-2" placeholder="Buscar" id="@{@Input_BuscarAsignados_ModalAsignarCCXUsuario}" onkeyup="$.ModuloAsignacionCentroCosto.CentroCostoUsuario.Modal.cartas.buscar('@{@Input_BuscarAsignados_ModalAsignarCCXUsuario}','@{@Contenedor_Asignados_ModalAsignarCCXUsuario}')">
+                <div id="@{@Contenedor_Asignados_ModalAsignarCCXUsuario}" class="border border-black contenedor-cartas"></div>
                 <!--<span id="contadorAsignados" class="fst-italic" style="color: #6c6c6c;">Mostrando 50 de 100</span>-->
-                <p class="fst-italic">Mostrando <span id="contadorAsignados">50</span>  de  <span class="totalCartas">100</span></p>
+                <p class="fst-italic">Mostrando <span id="@{@TXT_ContadorAsignados_ModalAsignarCCXUsuario}">50</span>  de  <span class="totalCartas">100</span></p>
             </div>
         </div>
     </div>
