Avance Reporte Vales por Usuarios

--- a/Views/adAgregarUsuario/adAgregarUsuario.cshtml
+++ b/Views/adAgregarUsuario/adAgregarUsuario.cshtml
@@ -276,6 +276,7 @@
                                     if (value === "Liquidador") {
                                         $("#@{@DIV_SeleccionarGasolineras}").removeClass("d-none")
                                         $("#@{@DIV_SeleccionarGasolineras}").addClass("d-block")
+                                        _this.dataDropDownList()
                                     } else {
                                         $("#@{@DIV_SeleccionarGasolineras}").removeClass("d-block")
                                         $("#@{@DIV_SeleccionarGasolineras}").addClass("d-none")
