--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -80,10 +80,13 @@
     <link href="~/css/materialdatetimepicker.css" rel="stylesheet" />*@
 
     <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/css/smart_wizard_all.min.css" rel="stylesheet" type="text/css" />
+    @*<link href="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/css/smart_wizard_all.min.css" rel="stylesheet" type="text/css" />
 
     <!-- JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/js/jquery.smartWizard.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/js/jquery.smartWizard.min.js" type="text/javascript"></script>*@
+
+    <link href="@Url.Content("~/lib/smartwizard/css/smart_wizard_all.min.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Content("~/lib/smartwizard/js/jquery.smartWizard.min.js")"> </script>
 
 
 
@@ -123,7 +126,8 @@
                     Swal.fire({
                         icon: icon,
                         title: title,
-                        text: text,
+                        html: text,
+                        //text: text,
                     });
                 }
 
