--- a/Views/adRegistarCompany/adRegistarCompany.cshtml
+++ b/Views/adRegistarCompany/adRegistarCompany.cshtml
@@ -13,8 +13,8 @@
     <script src="@Url.Content("~/js/jquery-3.3.1.min.js")"></script>
     <script src="@Url.Content("~/js/bootstrap.min.js")"></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+    @*<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">*@
+    <link rel="stylesheet" href="@Url.Content("~/lib/bootstrap-icons/font/bootstrap-icons.min.css")" />
     <script src="@Url.Content("~/lib/swalert/sweetalert2.min.js")"></script>
     <link href="@Url.Content("~/lib/swalert/sweetalert2.min.css")" rel="stylesheet" />
     <script src="@Url.Content("~/js/popper.min.js")"></script>
@@ -24,6 +24,8 @@
 
 </head>
 <body>
+    <div class="" id="loader_screen">
+    </div>
     <section class="gradient-form d-flex align-items-center">
         <div class="container-fluid">          
             <div class="row">
@@ -35,45 +37,34 @@
                             </div>
                         </div>
                         <div class="card-body p-lg-4 mx-md-4 row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 p-4 ">
+                                <h4 class="text-center">Información de Usuario Administrador</h4>
+
                                 <div class="form-outline mb-4">
-                                    <label class="form-label" for="">Nombre</label>
+                                    <label class="form-label" for="">Nombre<span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" id="name"
                                            placeholder="Ingresa tu nombre" />
 
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <label class="form-label" for="">Apellido</label>
+                                    <label class="form-label" for="">Apellido<span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" id="lastname" placeholder="Ingresa tu Apellido" />
 
                                 </div>
                                 <div class="form-outline mb-4">
-                                    <label class="form-label" for="">Nombre de usuario</label>
+                                    <label class="form-label" for="">Username<span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" id="username" placeholder=" Ingresa tu username " />
 
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <label class="form-label" for="">Correo electrónico</label>
+                                    <label class="form-label" for="">Correo electrónico<span class="text-danger">*</span></label>
                                     <input type="email" id="email" class="form-control" placeholder=" Ingresa tu correo" />
 
                                 </div>
-                            </div>
-                            <div class="col-lg-6">
                                 <div class="form-outline mb-4">
-                                    <label class="form-label" for="">Nombre de la empresa</label>
-                                    <input type="text" class="form-control" id="CompanyName" placeholder=" Ingresa el nombre de la empresa" />
-
-                                </div>
-
-                                <div class="form-outline mb-4">
-                                    <label class="form-label" for="">Dirección</label>
-                                    <input type="email" class="form-control" id="adrress" placeholder=" Ingresa la dirección de la empresa" />
-
-                                </div>
-                                <div class="form-outline mb-4">
-                                    <label class="form-label" for="">Contraseña</label>
+                                    <label class="form-label" for="">Contraseña<span class="text-danger">*</span></label>
                                     <div class="input-group border rounded p-0 show_hide_password">
                                         <input type="password" id="password" class="form-control border-0"
                                                placeholder="Ingresa tu contraseña" />
@@ -86,7 +77,7 @@
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <label class="form-label" for="">Repite tu contraseña</label>
+                                    <label class="form-label" for="">Repite tu contraseña<span class="text-danger">*</span></label>
                                     <div class="input-group border rounded p-0 show_hide_password">
                                         <input type="password" id="paswordRepite" class="form-control border-0"
                                                placeholder="Repite tu contraseña" />
@@ -98,10 +89,24 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-lg-6 p-4 " >
+                                <h4 class="text-center">Información de Empresa</h4>
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="">Nombre de la empresa<span class="text-danger">*</span></label>
+                                    <input type="text" class="form-control" id="CompanyName" placeholder=" Ingresa el nombre de la empresa" />
+
+                                </div>
+
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="">Dirección de empresa<span class="text-danger">*</span></label>
+                                    <input type="email" class="form-control" id="adrress" placeholder=" Ingresa la dirección de la empresa" />
+
+                                </div>
+
+                            </div>
                         </div>
                         <div class="row mb-4">                         
                             <div class="col-lg-4 offset-lg-1">
-                                @*<input type="button" class="btn btn-success w-100" id="" value="Cancelar" style="color:white;" />*@
                                 <a class="btn btn-success w-100 text-light" href="@Url.Action("Login", "Login")"> Cancelar </a>
                             </div>
                             <div class="col-lg-4 offset-lg-2">
@@ -285,8 +290,9 @@
                                 NombreCompany: $("#CompanyName").val(),
                                 DireccionCompany: $("#adrress").val()
                             }
-    
-                            $.get("@Url.Action("registerCompany", "adRegistarCompany")", args, function (datos) {
+                            $("#loader_screen").addClass("loader")
+                            $.post("@Url.Action("registerCompany", "adRegistarCompany")", args, function (datos) {
+                                $("#loader_screen").removeClass("loader")
                                 if (datos.bandera == 0) {
                                     _this.alert("Usuario invalido", datos.resultado);
                                 } else {
@@ -341,6 +347,17 @@
         background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
         /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+    }
+
+    .loader {
+        position: fixed;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        z-index: 9999;
+        background: url(@Url.Content("~/images/loading_img.gif")) 50% 50% no-repeat rgb(249,249,249);
+        opacity: .8;
     }
 
 </style>
