--- a/Views/adTutorial/adTutorial.cshtml
+++ b/Views/adTutorial/adTutorial.cshtml
@@ -66,12 +66,18 @@
 
         <div class="tab-content">
             <div id="step-1" class="tab-pane" role="tabpanel" aria-labelledby="step-1">
+                <div>
+                    <p class="text-primary text-end">*Información opcional</p>
+                </div>
                 @await Html.PartialAsync("~/Views/adConfiguracionCompany/adConfiguracionCompany.cshtml");
             </div>
             <div id="step-2" class="tab-pane" role="tabpanel" aria-labelledby="step-2">
                 @await Html.PartialAsync("~/Views/adCentroCosto/adCentroCosto.cshtml");
             </div>
             <div id="step-3" class="tab-pane" role="tabpanel" aria-labelledby="step-3">
+                <div>
+                    <p class="text-primary text-end">*Información opcional</p>
+                </div>
                 @await Html.PartialAsync("~/Views/adProyectos/adProyectos.cshtml");
             </div>
             <div id="step-4" class="tab-pane" role="tabpanel" aria-labelledby="step-4">
@@ -110,13 +116,13 @@
                     Cargar: function () {
 
                         var btnFinish = $('<button></button>').text('Atras')
-                            .addClass('btn btn-success me-2')
+                            .addClass('btn btn-primary btn-custom me-2')
                             .on('click', function () {
                                 //alert('Finish button clicked');
                                 $('#smartwizard').smartWizard("prev");
                             });
                         var btnCancel = $('<button></button>').text('Sigueinte')
-                            .addClass('btn btn-danger')
+                            .addClass('btn btn-primary btn-custom')
                             .on('click', function () {
                                 //$('#smartwizard').smartWizard("reset");
                                 //$('#smartwizard').smartWizard("next");
@@ -137,11 +143,41 @@
                         
                         $.get('@Url.Action("ValidarPaso", "adTutorial")', { Paso: _Paso }, function (mensaje) {
                             mensaje = mensaje[0]
+                            console.log(_Paso)
                             if (mensaje.bandera === 0) {
                                 $._combustible.alert("error", "Información incompleta", mensaje.resultado)
                             } else {
                                 //$('#smartwizard').smartWizard("prev");
-                                $('#smartwizard').smartWizard("next");
+                                if (_Paso === 8) {
+                                    Swal.fire({
+                                        title: "Tutorial terminado",
+                                        text: mensaje.resultado,
+                                        icon: "success",
+                                        showCancelButton: false,
+                                        confirmButtonColor: "#3085d6",
+                                        cancelButtonColor: "#d33",
+                                        confirmButtonText: "OK"
+                                    }).then((result) => {
+                                        if (result.isConfirmed) {
+                                            /*Swal.fire({
+                                                title: "Deleted!",
+                                                text: "Your file has been deleted.",
+                                                icon: "success"
+                                            });*/
+                                            $.get('@Url.Action("TerminarTutorial", "adTutorial")', function (JSON) {
+                                                /*JSON = JSON[0]*/
+                                                if (JSON.bandera === true) {
+                                                    window.location.reload()
+                                                }
+                                                //console.log(JSON)
+                                            })
+                                        }
+                                    });
+                                    /*$._combustible.alert("success", "Tutorial terminado", mensaje.resultado)*/
+                                    //window.location.reload()
+                                }else{
+                                    $('#smartwizard').smartWizard("next");
+                                }
                             }
                         })
                     }
@@ -157,60 +193,9 @@
         $.ModuloTutorial.init()
     })();
 </script>
-<script>
-    @*$(function () {
-        // SmartWizard initialize
-        //var contador = 0;
-        $('#smartwizard').smartWizard();
-
-        $("#smartwizard").on("leaveStep", function (e, anchorObject, currentStepIndex, nextStepIndex, stepDirection) {
-
-        /*let stepInfo = $('#smartwizard').smartWizard("getStepInfo");
-        console.log(stepInfo);*/
-
-        /*if (stepDirection === 'forward') {
-        console.log(stepNumber)
-        }*/
-        /*console.log("Boton presionaodo: " + stepDirection)
-        console.log("currentStepIndex :" + currentStepIndex)
-        console.log("Siguiente : " + nextStepIndex)*/
-
-
-        if (stepDirection === 'forward') {
-        switch (currentStepIndex) {
-        case 3:
-        let prueba = false;
-
-        if (prueba === false) {
-        $._combustible.alert("error", "F en el chat", "Debe completar la información")
-
-        }else{
-        $._combustible.alert("success", "LOL", "Pasa")
-        }
-        return prueba;
-        break;
-        default:
-        return true;
-
-        }
-
-        }
-        //console.log(stepNumber)
-        /*if (stepDirection === 'forward') {
-        var inputVal = $('#input1').val();
-        if (inputVal === '') {
-        alert('Please enter something in Step 1');
-        return false; // return false to stay on current step
-        }
-        }*/
-        /*if (contador > 0) {
-        $._combustible.alert("success", "Prueba", "XD")
-        }*/
-        //contador++;
-        //return true;
-        });
-
-
-
-        });*@
-</script>
+<style>
+    .btn-custom{
+        width: 150px;
+        height: 40px;  
+    }
+</style>
